kubernetes/files/firstdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firstdeploy
  namespace: lab11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firstdeploy
  template:
    metadata:
      labels:
        app: firstdeploy
    spec:
      containers:
      - image: registry.hpc.ut.ee/sysadmincourse-dev/hello-world:1.0
        imagePullPolicy: Never
        name: hello-world
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: hello-service
  namespace: lab11
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
  selector:
    app: firstdeploy
