kubernetes/files/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  namespace: lab11
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  defaultBackend:
    service:
      name: hello-service
      port:
        number: 80
